--- a/app/views/users/edit_password.html.erb
+++ b/app/views/users/edit_password.html.erb
@@ -1,4 +1,4 @@
-<%= form_for @user do |f| %>
+<%= form_for @user, url: user_update_password_path do |f| %>
   <%= f.label :password %>
   <%= f.password_field :password %>
 
